# c-tutorial

./: .gitignore  CMakeLists.txt  README.md
data-struct/: queue.c  queue.h  use_q.c
functions-tutorial/: README.md  day_month.c  proto.c  sum_arr.c  swap.c
multiplexing-io/: README.md  epolltest.c  polltest.c  selecttest.c
simple/: CMakeLists.txt  HelloWorld.h  global.c  loc_stat.c  main.c
socket/: README.md  Select.md  client.c  multiple-client-server.c  server.c
strings-tutorial/: fget1.c  p_and_s.c  strings1.c
structs/: book.c  friend.c  friends.c  funds1.c  funds2.c  funds3.c  manybook.c  name2.c
thread/: README.md  multithread.c  multithread1.c
